--- a/app/app_core/templates/home.html
+++ b/app/app_core/templates/home.html
@@ -10,7 +10,22 @@
     <link rel="stylesheet" href="/static/css/home.css" type="text/css">
 </head>
 
-<body>
+<body style="background-color:#CCE6FF">
+    <center>
+        <h1>Knowledge Sharing Campaign</h1>
+    </center>
+    <div id="header">
+        <h3>
+        <table border="1" width="100%" id="Table1">
+            <tr align="center">
+                <td><a href="home.html">Home</a></td>
+                <td><a href="aboutus.html">About Us</a></td>
+                <td><a href="events.html">Events</a></td>
+                <td><a href="contactus.html">Contact Us</a></td>
+            </tr>
+        </table>
+        </h3>
+    </div>
     <p><img height="5%" src="/static/images/logo1.jpeg" width="10%">
         <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf">
             <img align="right" alt="Go to KSC facebook page" border="0" height="42" src="/static/images/facebook1.jpeg" width="42"></a>
