--- a/app/app_core/templates/aboutus.html
+++ b/app/app_core/templates/aboutus.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <title>About Us</title>
-</head>
-<body style="background-color:#CCE6FF" />
-<center>
-    <h1>Knowledge Sharing Campaign</h1>
-    <img src="https://avatars2.githubusercontent.com/u/12671253?v=3&s=200" />
-</center>
-<div header>
-    <h3>
-		<table border="1" width="100%" id="Table1">
-			<tr align="center">
-				<td><a href="home.html">Home</a></td>
-				<td><a href="aboutus.html">About Us</a></td>
-				<td><a href="events.html">Events</a></td>
-				<td><a href="contactus.html">Contact Us</a></td>
-			</tr>
-		</table>
-	</h3>
-</div>
-<p>This is going to be the About Us page.</p>
-</body>
-
+	<head>
+	    <title>About Us</title>
+	</head>
+	<body style="background-color:#CCE6FF" />
+	<center>
+	    <h1>Knowledge Sharing Campaign</h1>
+	    <img src="https://avatars2.githubusercontent.com/u/12671253?v=3&s=200" />
+	</center>
+		<div header>
+					<table border="1" width="100%" id="Table1">
+						<tr font-size="14" align="center">
+							<td><a href="home.html">Home</a></td>
+							<td><a href="aboutus.html">About Us</a></td>
+							<td><a href="gallery.html">Gallery</a></td>
+							<td><a href="events.html">Events</a></td>
+						</tr>
+					</table>
+			</div>
+	<p>This is going to be the About Us page.</p>
+	</body>
 </html>
