--- a/app/app_core/templates/contactus.html
+++ b/app/app_core/templates/contactus.html
@@ -7,38 +7,23 @@
 		<center>
 			<h1>Knowledge Sharing Campaign</h1>
 			<img src="https://avatars2.githubusercontent.com/u/12671253?v=3&s=200"/>
-		</center>
-						<div header>
-			<h3>
+		<div header>
 				<table border="1" width="100%" id="Table1">
-					<tr align="center">
+					<tr font-size="14" align="center">
 						<td><a href="home.html">Home</a></td>
-						<td><a href="AboutUs.html">About Us</a></td>
-						<td><a href="AboutUs.html">Gallery</a></td>
-						<td><a href="Events.html">Events</a></td>
-						<td><a href="ContactUs.html">Contact Us</a></td>
+						<td><a href="aboutus.html">About Us</a></td>
+						<td><a href="gallery.html">Gallery</a></td>
+						<td><a href="events.html">Events</a></td>
 					</tr>
 				</table>
-			</h3>
 		</div>
-	<center>
-			<table style="width:10">
-				<tr>
-					<td><b>Contacts</b></td>
-				</tr>
-				<tr>
-					<td>Office Address Location</td>
-				</tr>
-				<tr>
-					<td><a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/">Facebook</a></td>
-				</tr>
-				<tr>
-					<td><a href="https://github.com/knowledge-sharing-campaign/site">Website</a></td>
-				</tr>
-				<tr>
-					<td><a href="https://twitter.com/">Twitter</a></td>
-				</tr>
-			</table>
-	</center>		
+			<h3>Contacts</h3>
+			
+			<h4><a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/">Facebook</a></h4>
+			<h4><a href="https://github.com/knowledge-sharing-campaign/site">Website</a></h4>
+
+			<h4><a href="https://twitter.com/">Twitter</a></h4>
+			<h4>Office Address: Apurupa Slipi Sy No 124 Part,    <br>3rd floor Gachilbowli Village Above KFC Serilingampally<br> Mandal RR Dist - Hyd - 500032, Gachibowli Road, <br>Rajiv gandhi Nagar, Gachibowli, <br>Hyderabad, Telangana 500032</h4>
+		</center>		
 	</body>
 </html>
