--- a/app/app_core/templates/events.html
+++ b/app/app_core/templates/events.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <title>Events</title>
-</head>
-<body style="background-color:#CCE6FF" />
-<center>
-    <h1>Knowledge Sharing Campaign</h1>
-    <img src="https://avatars2.githubusercontent.com/u/12671253?v=3&s=200" />
-</center>
-<div header>
-    <h3>
-				<table border="1" width="100%" id="Table1">
-					<tr align="center">
-						<td><a href="home.html">Home</a></td>
-						<td><a href="AboutUs.html">About Us</a></td>
-						<td><a href="AboutUs.html">Gallery</a></td>
-						<td><a href="Events.html">Events</a></td>
-						<td><a href="ContactUs.html">Contact Us</a></td>
-					</tr>
-				</table>
-			</h3>
-</div>
-<p>This is going to be the Events page.</p>
-</body>
-
+	<head>
+	    <title>Events</title>
+	</head>
+	<body style="background-color:#CCE6FF" />
+	<center>
+	    <h1>Knowledge Sharing Campaign</h1>
+	    <img src="https://avatars2.githubusercontent.com/u/12671253?v=3&s=200" />
+	</center>
+	<div header>
+		<table border="1" width="100%" id="Table1">
+			<tr font-size="14" align="center">
+				<td><a href="home.html">Home</a></td>
+				<td><a href="aboutus.html">About Us</a></td>
+				<td><a href="gallery.html">Gallery</a></td>
+				<td><a href="events.html">Events</a></td>
+			</tr>
+		</table>
+	</div>
+	<p>This is going to be the Events page.</p>
+	</body>
 </html>
