--- a/app/app_core/templates/home.html
+++ b/app/app_core/templates/home.html
@@ -4,9 +4,10 @@
 <head>
     <title>KSC</title>
     <meta charset="UTF-8">
-    <link href="/static/slider/themes/4/js-image-slider.css" rel="stylesheet" type="text/css" />
-    <script src="/static/slider/themes/4/js-image-slider.js" type="text/javascript"></script>
-    <script src="/static/slider/themes/1/js-image-slider.js" type="text/javascript"></script>
+    <meta name="viewport" content="width=device-width">
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="/static/slippry/dist/slippry.min.js"></script>
+    <link rel="stylesheet" href="/static/slippry/dist/slippry.css">
     <link rel="stylesheet" href="/static/css/home.css" type="text/css">
 </head>
 
@@ -33,59 +34,37 @@
             <img align="right" alt="Go to KSC google+ page" border="0" height="42" src="/static/images/google1.jpeg" width="42"></a>
         <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en"><img align="right" alt="Go to KSC facebook page" border="0" height="42" src="/static/images/twitter1.jpeg" width="42"></a>
     </p>
-
-    <table width="100%">
-        <tr>
-            <th>
-                <div id="sliderFrame">
-        <div id="slider">
-            <img height="800" src="/static/images/1.jpg" width="600">
-            <img height="800" src="/static/images/2.jpg" width="600">
-            <img height="800" src="/static/images/3.jpg" width="600">
-            <img height="800" src="/static/images/4.jpg" width="600">
-        </div>
-        <div class="group1-Wrapper">
-            <a onclick="imageSlider.previous()" class="group1-Prev"></a>
-            <a onclick="imageSlider.next()" class="group1-Next"></a>
-        </div>
-        <div style="text-align:center;padding:20px;z-index:20;">
-            <a onclick="imageSlider.previous()" class="group2-Prev"></a>
-            <a id='auto' onclick="switchAutoAdvance()"></a>
-            <a onclick="imageSlider.next()" class="group2-Next"></a>
-        </div>
-    </div>
-            </th>
-            <th>
-               <div align="top">
-    <form>
-        <center>
-            <br>
-            <h1>Sign in</h1>
-            <table>
-                <tr>
-                    <td>Username</td>
-                    <td>
-                        <input type="text">
-                    </td>
-                </tr>
-                <tr>
-                    <td>Password</td>
-                    <td>
-                        <input type="text">
-                    </th>
-                </tr>
-            </table>
-            <br>
-            <input type="submit" value="Sign In">
-            <input type="submit" value="Register">
-        </center>
-    </form>
-    </div> 
-            </td>
-        </tr>
-    </table>
-    
-    
+    <section class="slider_wrapper">
+        <article class="slider_block">
+            <ul id="slider">
+                <li>
+                    <a href="#slide1"><img src="/static/images/1.jpg" alt="This is caption 1"></a>
+                </li>
+                <li>
+                    <a href="#slide2"><img src="/static/images/2.jpg" alt="This is caption 2"></a>
+                </li>
+                <li>
+                    <a href="#slide3"><img src="/static/images/3.jpg" alt="This is caption 3"></a>
+                </li>
+                <li>
+                    <a href="#slide4"><img src="/static/images/4.jpg" alt="This is caption 4"></a>
+                </li>
+            </ul>
+        </article>
+    </section>
+    <script>
+    $(function() {
+        var demo1 = $("#slider").slippry({
+            transition: 'fade',
+            useCSS: true,
+            speed: 1000,
+            pause: 3000,
+            auto: true,
+            preload: 'visible',
+            autoHover: false
+        });
+    });
+    </script>
 </body>
 
 </html>
