Juma | home page | Added nav arrows

--- a/app/app_core/templates/home.html
+++ b/app/app_core/templates/home.html
@@ -38,16 +38,16 @@
         <article class="slider_block">
             <ul id="slider">
                 <li>
-                    <a href="#slide1"><img src="/static/images/1.jpg" alt="This is caption 1"></a>
+                    <a href="#slide1"><img src="/static/images/1.jpg"></a>
                 </li>
                 <li>
-                    <a href="#slide2"><img src="/static/images/2.jpg" alt="This is caption 2"></a>
+                    <a href="#slide2"><img src="/static/images/2.jpg"></a>
                 </li>
                 <li>
-                    <a href="#slide3"><img src="/static/images/3.jpg" alt="This is caption 3"></a>
+                    <a href="#slide3"><img src="/static/images/3.jpg"></a>
                 </li>
                 <li>
-                    <a href="#slide4"><img src="/static/images/4.jpg" alt="This is caption 4"></a>
+                    <a href="#slide4"><img src="/static/images/4.jpg"></a>
                 </li>
             </ul>
         </article>
