Noor Yash | Header | modyfying header

--- a/app/app_core/templates/aboutus.html
+++ b/app/app_core/templates/aboutus.html
@@ -2,22 +2,25 @@
 <html>
 	<head>
 	    <title>About Us</title>
+	
+
 	</head>
 	<body style="background-color:#CCE6FF" />
-	<center>
-	    <h1>Knowledge Sharing Campaign</h1>
-	    <img src="https://avatars2.githubusercontent.com/u/12671253?v=3&s=200" />
-	</center>
-		<div header>
-					<table border="1" width="100%" id="Table1">
-						<tr font-size="14" align="center">
-							<td><a href="home.html">Home</a></td>
-							<td><a href="aboutus.html">About Us</a></td>
-							<td><a href="gallery.html">Gallery</a></td>
-							<td><a href="events.html">Events</a></td>
-						</tr>
-					</table>
-			</div>
-	<p>This is going to be the About Us page.</p>
+	<header>
+    <div>
+        <tr><img height="5%" src="/static/images/logo1.jpeg" width="10%" id="logo"></tr>
+    </div>
+    <div align="center">
+        <table id="Table1">
+            <tr  align="center" id="bar">
+                <td><a href="home.html">Home</a></td>
+                <td><a href="aboutus.html">About Us</a></td>
+                <td><a href="gallery.html">Gallery</a></td>
+                <td><a href="forum.html">Forum</a></td>
+                <td><a href="upcomingevents.html">Upcoming Events</a></td>
+            </tr>
+        </table>
+    </div>
+</header>
 	</body>
 </html>
