--- a/app/app_core/templates/home.html
+++ b/app/app_core/templates/home.html
@@ -7,48 +7,46 @@
     <meta name="viewport" content="width=device-width">
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="/static/slippry/dist/slippry.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
     <link rel="stylesheet" href="/static/slippry/dist/slippry.css">
     <link rel="stylesheet" href="/static/css/home.css" type="text/css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen" />
+
     <style type="text/css">
     body {
-        background-color: #CCE6FF
-    }
-    
+        background-color: #CCE6FF }
     #Table1 {
-        background-color: #5CD6FF;
-        font: 20px arial, sans-serif;
-        width: 50%;
-        margin: 5px auto
-    }
-    
+        background-color: #5CD6FF ;
+        font: 20px arial, sans-serif ;
+        width:50% ;
+        margin: 5px auto }
     a:link {
-        color: black;
-        text-decoration: none
-    }
-    
+        color: black ;
+        text-decoration: none}
     a:hover {
-        text-transform: none
-    }
-    
+        text-transform: none}
     #bar {
         padding-top: 25px
     }
-    
-    footer {
-        padding-top: 600px
+    header{
+
+    height: 100px;
+    background: #dbdbdb;
+    width: 100%;
+    z-index: 10;
+    position: fixed;
+
     }
     </style>
+
 </head>
 
 <body>
+   <header>
     <div>
         <tr><img height="5%" src="/static/images/logo1.jpeg" width="10%" id="logo"></tr>
     </div>
     <div align="center">
         <table id="Table1">
-            <tr align="center" id="bar">
+            <tr  align="center" id="bar">
                 <td><a href="home.html">Home</a></td>
                 <td><a href="aboutus.html">About Us</a></td>
                 <td><a href="gallery.html">Gallery</a></td>
@@ -57,14 +55,16 @@
             </tr>
         </table>
     </div>
+</header>
+    
     <div align="right" id="lang">
-        <select>
-            <option>Language</option>
+        <select><option>Language</option>
             <option value="English">English</option>
             <option value="French">French</option>
         </select>
-        <button type="button" onclick="window.location='/register'">Log In</button>
+        <button type="button">Log In</button>
     </div>
+
     <p>
         <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf">
             <img align="right" alt="Go to KSC facebook page" border="0" height="42" src="/static/images/facebook1.jpeg" width="42"></a>
@@ -90,37 +90,6 @@
             </ul>
         </article>
     </section>
-    <footer>
-        <div>
-            <p>
-                <a id="contact-us" href="javascript:;">Contact Us</a>
-                <script>
-                $("#contact-us").click(function() {
-                    $.fancybox.open({
-                        href: '/static/htmls/contacts.html',
-                        type: 'iframe',
-                        padding: 5
-                    });
-                });
-                </script>
-                <a href="https://www.google.co.in/maps/dir/''/thoughtworks/@17.4429977,78.283609,12z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x3bcb9395ed638f61:0x49acd498fc2f1237!2m2!1d78.3574265!2d17.4430113" target="_blank"><img alt="Go to google maps" align="top" border="0" height="200" src="/static/images/map.jpeg" width="200"></a>
-                <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank"><img alt="Go to KSC facebook page" align="top" border="0" height="42" src="/static/images/facebook1.jpeg" width="42"></a>
-                <a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier" target="_blank"><img alt="Go to KSC google+ page" align="top" border="0" height="42" src="/static/images/google1.jpeg" width="42"></a>
-                <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank"><img alt="Go to KSC facebook page" align="Top" border="0" height="42" src="/static/images/twitter1.jpeg" width="42"></a>
-                <a id="partners" href="javascript:;">Partners</a>
-                <script>
-                $("#partners").click(function() {
-                    $.fancybox.open({
-                        href: '/static/htmls/partners.html',
-                        type: 'iframe',
-                        padding: 5
-                    });
-                });
-                </script>
-                <br>
-                <p>Copyright knowledgesharingcampaign <a href="terms&con.html" target="_blank">    (Terms & Conditions)</a> </p>
-        </div>
-    </footer>
     <script>
     $(function() {
         var demo1 = $("#slider").slippry({
@@ -134,6 +103,58 @@
         });
     });
     </script>
+
+    <table width="100%">
+        <tr>
+            <th>
+                <div id="sliderFrame">
+        <div id="slider">
+            <img height="800" src="/static/images/1.jpg" width="600">
+            <img height="800" src="/static/images/2.jpg" width="600">
+            <img height="800" src="/static/images/3.jpg" width="600">
+            <img height="800" src="/static/images/4.jpg" width="600">
+        </div>
+        <div class="group1-Wrapper">
+            <a onclick="imageSlider.previous()" class="group1-Prev"></a>
+            <a onclick="imageSlider.next()" class="group1-Next"></a>
+        </div>
+        <div style="text-align:center;padding:20px;z-index:20;">
+            <a onclick="imageSlider.previous()" class="group2-Prev"></a>
+            <a id='auto' onclick="switchAutoAdvance()"></a>
+            <a onclick="imageSlider.next()" class="group2-Next"></a>
+        </div>
+    </div>
+            </th>
+            <th>
+               <div align="top">
+    <form>
+        <center>
+            <br>
+            <h1>Sign in</h1>
+            <table>
+                <tr>
+                    <td>Username</td>
+                    <td>
+                        <input type="text">
+                    </td>
+                </tr>
+                <tr>
+                    <td>Password</td>
+                    <td>
+                        <input type="text">
+                    </th>
+                </tr>
+            </table>
+            <br>
+            <input type="submit" value="Sign In">
+            <input type="submit" value="Register">
+        </center>
+    </form>
+    </div> 
+            </td>
+        </tr>
+    </table>
+
 </body>
 
 </html>
