--- a/app/app_core/templates/registration.html
+++ b/app/app_core/templates/registration.html
@@ -14,12 +14,12 @@
         <h1>SIGN UP</h1>
         <p>
             <label for="firstname">First Name: <span class="required">*</span></label>
-            <input type="text" id="firstname" name="firstname" value="" placeholder="firstname here" required="required" autofocus="autofocus" />
+            <input type="text" id="firstname" name="firstname" value="" placeholder="First name" required="required" autofocus="autofocus" />
             <br>
         </p>
         <p>
             <label for="firstname">Sur Name: <span class="required">*</span></label>
-            <input type="text" id="surname" name="surname" value="" placeholder="surname here" required="required" autofocus="autofocus" />
+            <input type="text" id="surname" name="surname" value="" placeholder="surname" required="required" autofocus="autofocus" />
             <br>
         </p>
         <p>
@@ -34,7 +34,7 @@
         <p>
             <form>
                 <label for="emailaddress">Email Address: <span class="required=" autofocus="autofocus"></span></label>
-                <input type="text" name="emailaddress" placeholder="Alvaresrimsky@ksc.com" />
+                <input type="text" name="emailaddress" placeholder="example@ksc.com" />
             </form>
         </p>
         <p>
