Alvares.Rimsky | placeholder|email sample,fullname

--- a/app/app_core/templates/registration.html
+++ b/app/app_core/templates/registration.html
@@ -13,13 +13,8 @@
     <div style="float:left; width:50%;">
         <h1>SIGN UP</h1>
         <p>
-            <label for="firstname">First Name: <span class="required">*</span></label>
-            <input type="text" id="firstname" name="firstname" value="" placeholder="First name" required="required" autofocus="autofocus" />
-            <br>
-        </p>
-        <p>
-            <label for="firstname">Sur Name: <span class="required">*</span></label>
-            <input type="text" id="surname" name="surname" value="" placeholder="surname" required="required" autofocus="autofocus" />
+            <label for="fullname">Full Name: <span class="required">*</span></label>
+            <input type="text" id="fullname" name="fullname" value="" placeholder="Full Name" required="required" autofocus="autofocus" />
             <br>
         </p>
         <p>
