Juma, Yash | home page | added gallery and fixed home nav links

--- a/app/app_core/templates/events.html
+++ b/app/app_core/templates/events.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html>
-	<head>
-	    <title>Events</title>
-	</head>
-	<body style="background-color:#CCE6FF" />
-	<header>
-	    <div>
-	        <tr><img height="5%" src="/static/images/logo1.jpeg" width="10%" id="logo"></tr>
-	    </div>
-	    <div align="center">
-	        <table id="Table1">
-	            <tr  align="center" id="bar">
-	                <td><a href="home.html">Home</a></td>
-	                <td><a href="aboutus.html">About Us</a></td>
-	                <td><a href="gallery.html">Gallery</a></td>
-	                <td><a href="forum.html">Forum</a></td>
-	                <td><a href="upcomingevents.html">Upcoming Events</a></td>
-	            </tr>
-	        </table>
-	    </div>
-	</header>
-	</body>
+<head>
+    <title>Events</title>
+</head>
+<body style="background-color:#CCE6FF" />
+<center>
+    <h1>Knowledge Sharing Campaign</h1>
+    <img src="https://avatars2.githubusercontent.com/u/12671253?v=3&s=200" />
+</center>
+<div header>
+    <h3>
+				<table border="1" width="100%" id="Table1">
+					<tr align="center">
+						<td><a href="/">Home</a></td>
+						<td><a href="aboutus">About Us</a></td>
+						<td><a href="gallery">Gallery</a></td>
+						<td><a href="events">Events</a></td>
+						<td><a href="contactus">Contact Us</a></td>
+<span class="likebtn-wrapper" data-identifier="likeButton1"></span>
+	</table>
+				</h3>
+</div>
+<p>This is going to be the Events page.</p>
+</body>
 </html>
