--- a/app/app_core/templates/gallery.html
+++ b/app/app_core/templates/gallery.html
@@ -9,22 +9,20 @@
 	    <h1>Knowledge Sharing Campaign</h1>
 	    <img src="https://avatars2.githubusercontent.com/u/12671253?v=3&s=200" />
 	</center>
-	<header>
-    <div>
-        <tr><img height="5%" src="/static/images/logo1.jpeg" width="10%" id="logo"></tr>
-    </div>
-    <div align="center">
-        <table id="Table1">
-            <tr  align="center" id="bar">
-                <td><a href="home.html">Home</a></td>
-                <td><a href="aboutus.html">About Us</a></td>
-                <td><a href="gallery.html">Gallery</a></td>
-                <td><a href="forum.html">Forum</a></td>
-                <td><a href="upcomingevents.html">Upcoming Events</a></td>
-            </tr>
-        </table>
-    </div>
-</header>
-	<p>This is going to be the Gallery page.</p>
+		<div header>
+			<table border="1" width="100%" id="Table1">
+				<tr font-size="14" align="center">
+					<td><a href="/">Home</a></td>
+					<td><a href="aboutus">About Us</a></td>
+					<td><a href="gallery">Gallery</a></td>
+					<td><a href="events">Events</a></td>
+				</tr>
+			</table>
+		</div>
+	<table>
+		<tr><td><img src="/static/images/1.jpg"></td><td><img src="/static/images/2.jpg"></td></tr>
+		<tr><td><img src="/static/images/3.jpg"></td><td><img src="/static/images/4.jpg"></td></tr>
+		<tr><td><img src="/static/images/5.jpg"></td><td><img src="/static/images/6.jpg"></td></tr>
+	</table>
 	</body>
 </html>
