--- a/app/app_core/templates/home.html
+++ b/app/app_core/templates/home.html
@@ -38,20 +38,19 @@
     </style>
 
 </head>
-
-<body>
-   <header>
-    <div>
-        <tr><img height="5%" src="/static/images/logo1.jpeg" width="10%" id="logo"></tr>
-    </div>
-    <div align="center">
-        <table id="Table1">
-            <tr  align="center" id="bar">
-                <td><a href="home.html">Home</a></td>
-                <td><a href="aboutus.html">About Us</a></td>
-                <td><a href="gallery.html">Gallery</a></td>
-                <td><a href="forum.html">Forum</a></td>
-                <td><a href="upcomingevents.html">Upcoming Events</a></td>
+<body style="background-color:#CCE6FF">
+    <center>
+        <h1>Knowledge Sharing Campaign</h1>
+    </center>
+    <div id="header">
+        <h3>
+        <table border="1" width="100%" id="Table1">
+            <tr align="center">
+                <td><a href="/">Home</a></td>
+                <td><a href="aboutus">About Us</a></td>
+                <td><a href="events">Events</a></td>
+                <td><a href="gallery">Gallery</a></td>
+                <td><a href="contactus">Contact Us</a></td>
             </tr>
         </table>
     </div>
@@ -70,23 +69,18 @@
             <img align="right" alt="Go to KSC facebook page" border="0" height="42" src="/static/images/facebook1.jpeg" width="42"></a>
         <a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier">
             <img align="right" alt="Go to KSC google+ page" border="0" height="42" src="/static/images/google1.jpeg" width="42"></a>
-        <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en"><img align="right" alt="Go to KSC facebook page" border="0" height="42" src="/static/images/twitter1.jpeg" width="42"></a>
-    </p>
+        <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en"><img align="right" alt="Go to KSC facebook page" border="0" height="42" src="/static/images/twitter1.jpeg" width="42"></
+        </p>
     <section class="slider_wrapper">
         <article class="slider_block">
             <ul id="slider">
-                <li>
-                    <a href="#slide1"><img src="/static/images/1.jpg"></a>
-                </li>
-                <li>
-                    <a href="#slide2"><img src="/static/images/2.jpg"></a>
-                </li>
-                <li>
-                    <a href="#slide3"><img src="/static/images/3.jpg"></a>
-                </li>
-                <li>
-                    <a href="#slide4"><img src="/static/images/4.jpg"></a>
-                </li>
+                <li><a href="#slide1"><img src="/static/images/1.jpg"></a></li>
+                <li><a href="#slide2"><img src="/static/images/2.jpg"></a></li>
+                <li><a href="#slide3"><img src="/static/images/3.jpg"></a></li>
+                <li><a href="#slide4"><img src="/static/images/4.jpg"></a></li>
+                <li><a href="#slide5"><img src="/static/images/5.jpg"></a></li>
+                <li><a href="#slide6"><img src="/static/images/6.jpg"></a></li>
+                <li><a href="#slide7"><img src="/static/images/7.jpg"></a></li>
             </ul>
         </article>
     </section>
