Alvares.Rimsky | placeholder|email sample,fullname

--- a/app/app_core/templates/registration.html
+++ b/app/app_core/templates/registration.html
@@ -13,7 +13,7 @@
     <div style="float:left; width:50%;">
         <h1>SIGN UP</h1>
         <p>
-            <label for="fullname">Full Name: <span class="required">*</span></label>
+            <label for="fullname">Full Name: <span class="required"></span></label>
             <input type="text" id="fullname" name="fullname" value="" placeholder="Full Name" required="required" autofocus="autofocus" />
             <br>
         </p>
@@ -52,7 +52,7 @@
                 <br>
                 <form>
                     <p>
-                        <label for="Country">Country: <span class="required">*</span></label>
+                        <label for="Country">Country: <span class="required"></span></label>
                         <select name="country">
                             <option value="">Country...</option>
                             <option value="DZ">Algeria</option>
@@ -108,22 +108,22 @@
                 </form>
                 </p>
                 <p>
-                    <label for="university"> University/Institution <span class="required">*</span></label>
+                    <label for="university"> University/Institution <span class="required"></span></label>
                     <input type="text" name="university or institution">
                     <br>
                 </p>
                 <p>
-                    <label for="course"> Course <span class="required">*</span></label>
+                    <label for="course"> Course <span class="required"></span></label>
                     <input type="text" name="Course or field of study">
                     <br>
                 </p>
                 <p>
-                    <label for="captchar"> Captchar <span class="captchar">*</span></label>
+                    <label for="captchar"> Captchar <span class="captchar"></span></label>
                     <input type="text" name="Verify if you are a human">
                     <br>
                 </p>
                 <p>
-                    <label for="password">Password: <span class="required">*</span></label>
+                    <label for="password">Password: <span class="required"></span></label>
                     <input type="text" id="password" name="password" value="" placeholder="*********" required="required" autofocus="autofocus" />
                 </p>
                 <p>
